# spotify-cleaner

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CandidateTable.tsx  ConfirmApplyDialog.tsx  GdprDropzone.tsx  ProfileBar.tsx  ProgressPanel.tsx  ScanForm.tsx  SetupBanner.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  input.tsx  progress.tsx  skeleton.tsx  toggle-group.tsx
frontend/src/lib/: api.ts  types.ts  useJobStream.ts  utils.ts
src/spotify_cleaner/: __init__.py  auth.py  backup.py  cleaner.py  cli.py  config.py  csvsafe.py  library.py  models.py  planner.py
src/spotify_cleaner/scoring/: __init__.py  base.py  gdpr.py  lastfm.py  toptracks.py
src/spotify_cleaner/web/: __init__.py  __main__.py  app.py  jobs.py  oauth.py  schemas.py  serialize.py
src/spotify_cleaner/web/routers/: __init__.py  apply.py  art.py  auth.py  gdpr.py  scan.py  system.py
tests/: test_backup.py  test_config.py  test_library.py  test_planner.py  test_web.py
